--- a/Example 4 (multiview)/index.html
+++ b/Example 4 (multiview)/index.html
@@ -70,43 +70,41 @@
         .attr("width","100%")
         .attr("height","100%")
 
-    function main(data){
-        // fetch data from table
-        let culmen_length_mm = d3.map(data,function (d){
-            return +d.culmen_length_mm})
-        let culmen_depth_mm = d3.map(data,function (d){
-            return +d.culmen_depth_mm})
-        let flipper_length_mm = d3.map(data,function (d){
-            return +d.flipper_length_mm})
-        let species = d3.map(data,function (d){
-            return d.species})
-        let species_types = new Set(species)
+    d3.tsv("data/palmer_penguin_species.tsv")
+            .then(
+                function (data) {
+                    let island = ['Biscoe', 'Dream' , 'Torgersen']
+                    let classic_colors = ["#440154", "#21908dff", "#fde725ff"]
+                    let color = d3.scaleOrdinal()
+                        .domain(island)
+                        .range(classic_colors)
 
-        let species_code = d3.map(data,function (d) {
-            species = d.species
-            if (species === "Adelie") {
-                return 0
-            } else if (species === "Gentoo") {
-                return 1
-            } else {
-                return 2
-            }
-        })
 
-        // main svg
-        scatter_plot(culmen_depth_mm,
-            culmen_length_mm,
-            10,
-            species_code,
-            'main'
-            ,title='Penguin Species',
-            xLabel="culmen_depth_mm",
-            yLabel="culmen_length_mm");
-        //#############
-        bar_plot(culmen_depth_mm, 10,'top')
-        h_bar_plot(culmen_length_mm,10,'right')
+                    let formatted_data1 = d3.map(data, function (d) {
+                        return {
+                            x: d.culmen_length_mm,
+                            y: d.culmen_depth_mm,
+                            r: d.flipper_length_mm,
+                            c: color(d.island)
+                        }
+                    })
 
-    }
+
+                    scatter_plot(formatted_data1, "#figure1",
+                        title = "Penguin Species",
+                        xLabel = "culmen_length_mm",
+                        yLabel = "culmen_depth_mm",
+                        legend = island,
+                        legendcolors = classic_colors,
+                        margin = 200,
+                        bar_plot(culmen_length_mm, 10,'top'),
+                        h_bar_plot(culmen_depth_mm,10,'right')
+                    )
+                    
+                }
+            )
+
+    
 </script>
 
 </body>
